# mdql

./: .gitignore  Cargo.toml  LICENSE.md  README.md  mdql.md  pyproject.toml
.github/workflows/: release.yml
crates/mdql/: Cargo.toml
crates/mdql-core/: Cargo.toml
crates/mdql-core/src/: api.rs  cache.rs  database.rs  errors.rs  executor.rs  index.rs  lib.rs  loader.rs  migrate.rs  model.rs  parser.rs  projector.rs  query_ast.rs  query_engine.rs  query_join.rs  query_parser.rs  schema.rs  search.rs  stamp.rs  txn.rs  validator.rs  watcher.rs
crates/mdql-web/: Cargo.toml
crates/mdql-web/src/: lib.rs  main.rs  server.rs
crates/mdql-web/static/: app.js  index.html  style.css
crates/mdql/src/: main.rs
examples/: _database.md
examples/backtests/: _mdql.md  _schema.md  bt-altcoin-btc-lag-binance.md  bt-funding-rate-fade-binance.md  bt-perp-spot-basis-binance.md
examples/strategies/: 001-token-unlock-shorts.md  _mdql.md  _schema.md  aave-bad-debt-accumulation-protocol-insurance-module-liquida.md  aave-health-factor-1-0-cliff-pre-liquidation-position-mappin.md  aave-safety-module-slashing-event-stkaave-forced-liquidation.md  aave-utilization-kink-rate-spike-borrow-unwind-short.md  airdrop-claim-deadline-forced-sell-unclaimed-token-expiry-wi.md  airdrop-cliff-sell-claim-and-dump-window-mapping.md  airdrop-farming-fingerprint-pre-tge-sell-wave-sizing.md  algorithmic-stablecoin-peg-defense-emission-reflexive-mint-d.md  altcoin-btc-lag-trade.md  altcoin-halving-supply-shock-emission-schedule-hard-cut.md  amm-concentrated-liquidity-range-breach-rebalance.md  arbitrum-base-optimism-l2-sequencer-batch-posting-gas-cost-l.md  axie-infinity-slp-seasonal-emission-reset-short.md  bad-debt-socialization-event-token-short.md  beefy-yearn-vault-harvest-frontrun-compounding-spike-arbitra.md  bitcoin-mining-difficulty-adjustment-hash-rate-migration-sel.md  bitwise-21shares-etp-monthly-index-rebalancing-window.md  blur-bid-pool-vacuum-season-end-point-farm-withdrawal.md  bridge-inflow-to-destination-chain-dex-liquidity-pressure.md  candidate-3-weird-protocol-token-swap-deadline-legacy-token-.md  candidate-4-weird-retroactive-airdrop-snapshot-date-back-cal.md  candidate-5-wildcard-fomc-announcement-day-perp-funding-rate.md  candidate-5-wildcard-governance-forum-vote-anticipation-quor.md  candidate-5-wildcard-lending-protocol-dust-liquidation-dead-.md  candidate-5-wildcard-multisig-treasury-nonce-watching-protoc.md  candidate-5-wildcard-nexus-mutual-wnxm-discount-squeeze-mutu.md  candidate-5-wildcard-prediction-market-invalid-resolution-co.md  candidate-5-wildcard-tether-usdt-preferred-settlement-chain-.md  candidate-5-wildcard-the-perpetual-funding-rate-as-a-carry-t.md  cascading-liquidation-chain-second-order-collateral-asset-sh.md  cex-listing-announcement-front-run-via-dex.md  cex-withdrawal-suspension-dex-premium-forced-buy.md  chainlink-heartbeat-oracle-lag-perp-mark-price-stale-window.md  cme-bitcoin-futures-monthly-expiry-final-hour-basis-compress.md  cme-gap-fill-structural-price-anchor-from-weekend-non-tradin.md  cme-quarterly-futures-basis-collapse.md  compound-morpho-utilization-rate-kink-crossing-borrow-rate-s.md  (+122 more)
python/: Cargo.toml
python/mdql/: __init__.py  api.py  database.py  errors.py  loader.py  migrate.py  model.py  pandas.py  parser.py  polars.py  query_engine.py  query_parser.py  schema.py  stamp.py  txn.py  validator.py
python/mdql/libmdql.dylib.dSYM/Contents/: Info.plist
python/src/: lib.rs
src/mdql/: __init__.py  api.py  cli.py  database.py  errors.py  loader.py  model.py  pandas.py  parser.py  projector.py  query_engine.py  query_parser.py  schema.py  stamp.py  validator.py
src/mdql.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_cli.py  test_migrate.py  test_pandas.py  test_parser.py  test_query_engine.py  test_query_parser.py  test_rust_python_alignment.py  test_schema.py  test_sql_write.py  test_stamp.py  test_subquery.py  test_txn.py  test_validator.py
tests/fixtures/invalid_table/: _mdql.md  duplicate-section.md  malformed-yaml.md  missing-field.md  missing-section.md  unknown-frontmatter.md  unknown-section.md  wrong-type-date.md  wrong-type-int.md
tests/fixtures/strict_table/: _mdql.md  mismatched-h1.md  missing-h1.md  unknown-section.md  valid-with-h1.md
tests/fixtures/subquery_db/: _mdql.md
tests/fixtures/subquery_db/products/: _mdql.md  gadget-x.md  gadget-y.md  widget-a.md  widget-b.md
tests/fixtures/valid_table/: _mdql.md  numbered-headings.md  simple.md  unknown-section.md  with-code-fence.md  with-tags.md
