[workspace]
members = [
    "crates/mdql-core",
    "crates/mdql",
    "crates/mdql-web",
    "python",
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/mdql-db/mdql"
homepage = "https://github.com/mdql-db/mdql"
authors = ["Rasmus Groth <rasmus@marquela.dev>"]
