[package]
name = "mdql-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core library for MDQL — a queryable database backed by markdown files"
readme = "../../README.md"
keywords = ["markdown", "database", "query", "sql", "frontmatter"]
categories = ["database", "command-line-utilities", "parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
tempfile = "3"
walkdir = "2"
thiserror = "2"
rayon = "1"
indexmap = { version = "2", features = ["serde"] }
tantivy = "0.22"
libc = "0.2"
notify = "7"

[dev-dependencies]
pretty_assertions = "1"
