[package]
name = "mdql-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdql-web"
path = "src/main.rs"

[dependencies]
mdql-core = { path = "../mdql-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
