[package]
name = "mdql-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Web server and API for MDQL — a queryable database backed by markdown files"
readme = "../../README.md"
keywords = ["markdown", "database", "web", "api", "query"]
categories = ["database", "web-programming::http-server"]

[[bin]]
name = "mdql-web"
path = "src/main.rs"

[dependencies]
mdql-core = { path = "../mdql-core", version = "0.3.0" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
