[package]
name = "mdql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MDQL — a queryable database where every entry is a markdown file"
readme = "../../README.md"
keywords = ["markdown", "database", "query", "sql", "cli"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "mdql"
path = "src/main.rs"

[dependencies]
mdql-core = { path = "../mdql-core", version = "0.4.1" }
mdql-web = { path = "../mdql-web", version = "0.4.1" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
rustyline = "15"
dirs-next = "2"
